--- a/Capas/CapaNegocio/CapaNegocio.csproj
+++ b/Capas/CapaNegocio/CapaNegocio.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
